done : landing page sliders

--- a/newGizaClub/src/pages/landing/landing.scss
+++ b/newGizaClub/src/pages/landing/landing.scss
@@ -10,11 +10,14 @@ page-landing {
 .slide-zoom{
     height: 100%;
 }
+/*
 .slide-logo{
     position: fixed;
     top: 45%;
     left: 37%;
-    /* margin-top: -50px; */
-    /* margin-left: -100px; */
+     margin-top: -50px; 
+     margin-left: -100px; 
     background-color: transparent;
 }
+*/
+
