added empty profile page

--- a/newGizaClub/src/pages/home/home.scss
+++ b/newGizaClub/src/pages/home/home.scss
@@ -60,6 +60,10 @@ span.notif-title{
     vertical-align: middle;
 }
 .toolbar-title-md{
-        width: inherit;
+    width: inherit;
     margin: auto;
+    color: #ffffff;
+}
+.toolbar-background-md{
+    background: #003147;
 }
