added notification tab , master plan page

--- a/newGizaClub/src/pages/forgetpw/forgetpw.scss
+++ b/newGizaClub/src/pages/forgetpw/forgetpw.scss
@@ -29,3 +29,10 @@ page-forgetpw {
     color: #b7bdc1;
     margin: auto;
 }
+.round-img{
+    border-radius: 100%;
+    height: 24%;
+    width: 42%;
+    margin: auto;
+    display: block;
+}
