--- a/newGizaClub/src/pages/login/login.scss
+++ b/newGizaClub/src/pages/login/login.scss
@@ -78,6 +78,11 @@ ion-input{
     background-color:#d8d8d8;
 }
 .round-img{
-     border-radius: 100% !important;
+    border-radius: 100%;
+    height: 24%;
+    width: 42%;
+    margin: auto;
+    display: block;
 }
+
 
