add : added about us page

--- a/newGizaClub/src/pages/about/about.scss
+++ b/newGizaClub/src/pages/about/about.scss
@@ -1,3 +1,14 @@
 page-about {
 
 }
+.about-container{
+    background-color: #003146;
+    background-image: "assets/img/aboutus.png";
+
+}
+.about-header{
+    color: #fdb71e;
+}
+.about-text{
+    color : #ffffff;
+}
