add : added  profile page (static)

--- a/newGizaClub/src/pages/profile/profile.scss
+++ b/newGizaClub/src/pages/profile/profile.scss
@@ -1,3 +1,20 @@
 page-profile {
 
 }
+.profile-segment-button{
+    color : #ffffff !important;
+}
+.segment-md-secondary .segment-button.segment-activated{
+    border-color: #fbb713;
+    color: #ffffff;
+    opacity: 1;
+}
+.profile-user-name{
+        margin: auto;
+    text-align: center;
+    color: #005a87;
+}
+.profile-user-row{
+    width: 90%;
+    margin: auto;
+}
