--- a/newGizaClub/src/pages/sports/sports.scss
+++ b/newGizaClub/src/pages/sports/sports.scss
@@ -1,6 +1,14 @@
 page-sports {
 
 }
-.sport-des{
+
+.item-text{
+    color: #000000;
+    font-family: cursive;
+    font-size: 17px;
+}
+.item-text-container{
+    width: 80%;
     text-align: center;
+    margin: auto;
 }
