added : notifications page layout  & new vertion of app.apk

--- a/newGizaClub/src/pages/notifications/notifications.scss
+++ b/newGizaClub/src/pages/notifications/notifications.scss
@@ -1,3 +1,13 @@
 page-notifications {
 
 }
+.notification-header{
+    padding-top: 50%;
+    font-size: 21px;
+    text-align: center;
+
+}
+.bottom-notif-add{
+        bottom: 0;
+    position: initial;
+}
