updated from angular2 & ionic 2 to angular4 & ionic 3

--- a/newGizaClub/src/pages/resturants/resturants.scss
+++ b/newGizaClub/src/pages/resturants/resturants.scss
@@ -41,3 +41,9 @@ page-resturants {
     width: 13px;
     height: 19px;
 }
+.rest-item-price{
+    text-align: center;
+    font-size: 24px;
+    vertical-align: bottom;
+    margin-top: 10%;
+}
