--- a/newGizaClub/src/components/header/header.html
+++ b/newGizaClub/src/components/header/header.html
@@ -4,4 +4,10 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title class="title">{{name}}</ion-title>
+    <!--
+    <div *ngIf="logedIn == true">
+    <button ion-button name="logOut" (click)="logOut()" >
+    </button>
+    </div>
+    !-->
   </ion-navbar>
