--- a/newGizaClub/src/pages/interact/interact.scss
+++ b/newGizaClub/src/pages/interact/interact.scss
@@ -3,9 +3,9 @@ page-interact {
             height: 322px;
             width: 322px;
             margin: auto;
-            background-color: transparent;
-            border: 11px solid #000;
-            border-radius: 50%;
+            background-color: green;
+            font-size: 20px;
+            
     }
     .image-div-wrapper{
         height : 24% ;
