update the home view

--- a/newGizaClub/src/pages/login/login.scss
+++ b/newGizaClub/src/pages/login/login.scss
@@ -1,4 +1,10 @@
 page-login {
+    .user-dev{
+            width: 100%;
+    text-align: center;
+    font-size: 30px;
+    color: #ffffff;
+    }
 
 }
 .login-content{
