--- a/newGizaClub/src/pages/codeverification/codeverification.scss
+++ b/newGizaClub/src/pages/codeverification/codeverification.scss
@@ -1,3 +1,9 @@
 page-codeverification {
+    .regestration-bottom{
+    margin: auto;
+    width: 100%;
+    color: #003147;
+    background-color: #fbb713;
+    }
 
 }
