-added relatives & updated the profile -removed the password requiring for now

--- a/newGizaClub/src/pages/main/main.scss
+++ b/newGizaClub/src/pages/main/main.scss
@@ -43,9 +43,9 @@ span.notif-title{
 .list-md {
    // margin: -37px 0 16px;
 }
-.event-img{
-    width: 92% !important;
-    height: 100% !important;
+.sports-img{
+    
+    height: 92% !important;
 }
 .label-md {
     margin: 2px 8px 13px 0;
