--- a/newGizaClub/src/pages/resturants/resturants.scss
+++ b/newGizaClub/src/pages/resturants/resturants.scss
@@ -30,7 +30,9 @@ page-resturants {
     width: 30%;
 }
 .item-header{
-        font-size: 24px;
+    font-size: 24px;
+    white-space: normal;
+    overflow: auto;
     color: #086790;
 }
 .rest-input{
