update to order page added table number

--- a/newGizaClub/src/pages/order/order.scss
+++ b/newGizaClub/src/pages/order/order.scss
@@ -2,7 +2,7 @@ page-order {
 .total-price{    
     margin: auto;
     margin-top: 60px;
-    font-size: 1.4em;
+    font-size: 1.1em;
 }
 .payment-method-col{
     margin: auto;
@@ -20,5 +20,11 @@ page-order {
     width: 100%;
     color: #003147;
     background-color:#fbb713 ;
+}
+.order-table-num{
+    color: #000000;
+}
+.text-input-md{
+    color: #000000;
 }
 }
