udate get the POS and products from API

--- a/newGizaClub/src/pages/resturants/resturants.scss
+++ b/newGizaClub/src/pages/resturants/resturants.scss
@@ -1,4 +1,9 @@
 page-resturants {
+    .no-items-cont{
+        color: #357e9f;
+        font-size: 1.4em;
+        text-align: center;
+    }
 
 }
 .rest-slides.cont{
