--- a/newGizaClub/src/pages/order/order.scss
+++ b/newGizaClub/src/pages/order/order.scss
@@ -1,4 +1,8 @@
 page-order {
+    .table-number{
+        box-shadow: 0px 1px 13px 1px rgba(0,0,0,0.77);
+        width: 38px;
+    }
 .total-price{    
     margin: auto;
     margin-top: 60px;
