added : sports regestration & get news from server & added NGSC.jks for android production

--- a/newGizaClub/src/components/header/header.html
+++ b/newGizaClub/src/components/header/header.html
@@ -8,7 +8,7 @@
     <ion-title class="title">{{name}}</ion-title>
       </ion-col>
   <ion-col col-auto>
-    <button ion-button name="logOut" class="logout-Button" (click)="logOut()" >logOut
+    <button ion-button name="logOut" class="logout-Button" (tap)="logOut()" >logOut
     </button>
     </ion-col>
     </ion-row>
