--- a/newGizaClub/src/app/app.scss
+++ b/newGizaClub/src/app/app.scss
@@ -14,3 +14,13 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+.input-cover {
+    left: 0;
+    top: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    box-shadow: 0px 0px 19px 6px rgba(204, 149, 19, 0.6);
+}
