--- a/newGizaClub/src/pages/main/main.scss
+++ b/newGizaClub/src/pages/main/main.scss
@@ -1,4 +1,12 @@
 page-main {
+    .notif-scroll{
+        width: 100%;
+        height: 100%;
+    }
+    .sports-div{
+        height: 33%;
+        box-shadow: 0px 0px 1px 6px rgba(117, 116, 113, 0.6);;
+    }
 .norif-col{
    
     padding-left: 27px;
