--- a/newGizaClub/src/pages/sports/sports.scss
+++ b/newGizaClub/src/pages/sports/sports.scss
@@ -1,4 +1,16 @@
 page-sports {
+    .sports-button{
+        color: #003147;
+        background-color: #fbb713;
+        margin-top: 38px;
+    }
+    .sport-logo{
+        border-radius: 100%;
+        height: 24%;
+        width: 80%;
+        margin: auto;
+        display: block;
+    }
 
 }
 
