updated the  veiw

--- a/newGizaClub/src/components/header/header.html
+++ b/newGizaClub/src/components/header/header.html
@@ -4,7 +4,7 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-row >
-      <ion-col>
+      <ion-col class="title-cont">
     <ion-title class="title">{{name}}</ion-title>
       </ion-col>
   <ion-col col-auto>
