--- a/newGizaClub/src/components/header/header.scss
+++ b/newGizaClub/src/components/header/header.scss
@@ -1,6 +1,13 @@
 header {
     
 }
+.title-cont{
+    overflow:  auto;
+}
+
+.toolbar-title-md{
+    font-size: 1.2em;
+}
 .logout-Button{
     margin: auto;
     
