--- a/newGizaClub/src/pages/jointeam/jointeam.scss
+++ b/newGizaClub/src/pages/jointeam/jointeam.scss
@@ -1,6 +1,6 @@
 page-jointeam {
     .join-team-div{
-        border: #4E4747 solid;
+        border: #003147 thin solid;
         padding-top: 15px;
        // border-radius: 15%;
     }
