--- a/newGizaClub/src/pages/order/order.scss
+++ b/newGizaClub/src/pages/order/order.scss
@@ -16,7 +16,7 @@ page-order {
         border: solid #003147;
 }
 .order-col{
-        border: solid #003147;
+        border: thin solid #003147;
         font-size: 13px;
 }
 .order-bottom{
