--- a/newGizaClub/src/app/app.scss
+++ b/newGizaClub/src/app/app.scss
@@ -24,3 +24,8 @@
     touch-action: manipulation;
     box-shadow: 0px 0px 19px 6px rgba(204, 149, 19, 0.6);
 }
+.icon-no-margin {
+    color: #fbb713;
+    font-size: 3em;
+    margin: 0 !important;
+  }
