--- a/newGizaClub/src/pages/listsportdetails/listsportdetails.scss
+++ b/newGizaClub/src/pages/listsportdetails/listsportdetails.scss
@@ -1,3 +1,9 @@
 page-listsportdetails {
-
+    .sport-logo{
+        border-radius: 100%;
+        height: 27%;
+        width: 40%;
+        margin: auto;
+        display: block;
+    }
 }
