--- a/newGizaClub/src/pages/main/main.scss
+++ b/newGizaClub/src/pages/main/main.scss
@@ -1,11 +1,23 @@
 page-main {
+    .rest-img-cont{
+        width: 100%;
+        height: 55%;
+    }
+    .pos-img{
+        height: 100% !important;
+        width: 100% !important;
+
+    }
+    .rest-slides-cont{
+        width: 100%;
+    }
     .notif-scroll{
         width: 100%;
         height: 100%;
     }
     .sports-div{
         height: 33%;
-        box-shadow: 0px 0px 1px 6px rgba(117, 116, 113, 0.6);;
+      //  box-shadow: 0px 0px 1px 6px rgba(117, 116, 113, 0.6);;
     }
 .norif-col{
    
