--- a/newGizaClub/src/pages/news/news.scss
+++ b/newGizaClub/src/pages/news/news.scss
@@ -1,4 +1,8 @@
 page-news {
+    .news-interact{
+        margin: auto;
+        width: 90%;
+    }
         .main-content {
             box-shadow: 0px -1px 13px 1px rgba(0,0,0,0.3);
         }
@@ -10,16 +14,23 @@ page-news {
             margin-top: 83px !important ;
             margin-bottom: 56px;
         }
- 
-        ion-header {
-            backdrop-filter: blur(8px);
+         .col{
+            padding: 0px;
+        }
+        ion-card img {
+            display: block;
+            margin: auto;
+            width: 60%;
         }
  
         ion-navbar {
             
             box-shadow: 0px 1px 13px 1px rgba(0,0,0,0.77);
         }
- 
+        .news-img-cont{
+            width: 100%;
+            height: 55%;
+        }
         ion-segment {
             padding: 0px 12px;
             opacity: 0.7;
