--- a/newGizaClub/src/pages/profile/profile.scss
+++ b/newGizaClub/src/pages/profile/profile.scss
@@ -1,5 +1,13 @@
 page-profile {
+    .card-md{
+        box-shadow: 0 2px 2px 0 rgb(0, 49, 71), 0 3px 1px -2px rgb(161, 166, 169), 0 1px 5px 0 rgb(0, 49, 71);
+    }
 
+}
+.balance-card{
+    margin-top: 70px;
+    text-align: center;
+    padding-top: 18px;
 }
 .profile-segment-button{
     color : #ffffff !important;
