--- a/newGizaClub/src/pages/sports-regestration/sports-regestration.scss
+++ b/newGizaClub/src/pages/sports-regestration/sports-regestration.scss
@@ -1,3 +1,9 @@
 page-sports-regestration {
-
+    .sport-logo{
+        border-radius: 100%;
+        height: 24%;
+        width: 40%;
+        margin: auto;
+        display: block;
+    }
 }
