--- a/newGizaClub/src/pages/sports/sports.scss
+++ b/newGizaClub/src/pages/sports/sports.scss
@@ -2,12 +2,14 @@ page-sports {
     .sports-button{
         color: #003147;
         background-color: #fbb713;
-        margin-top: 38px;
+        width: auto;
+        margin: auto;
+    
     }
     .sport-logo{
         border-radius: 100%;
         height: 24%;
-        width: 80%;
+        width: 40%;
         margin: auto;
         display: block;
     }
