added : get user balance at every tranaction , user balance history page bug fix

--- a/newGizaClub/src/pages/regestration/regestration.scss
+++ b/newGizaClub/src/pages/regestration/regestration.scss
@@ -1,4 +1,12 @@
 page-regestration {
+  .reg-error-row{
+    width: 90%;
+  }
+  .reg-error-div{
+    color: #ffffff;
+    width: 100%;
+    text-align: center;
+  }
     
 }
 .regestration-content{
