changes to the view

--- a/newGizaClub/src/app/app.scss
+++ b/newGizaClub/src/app/app.scss
@@ -25,7 +25,7 @@
     box-shadow: 0px 0px 19px 6px rgba(204, 149, 19, 0.6);
 }
 .icon-no-margin {
-    color: #fbb713;
+    color: #1f4a5d !important;
     font-size: 3em;
     margin: 0 !important;
   }
