--- a/newGizaClub/src/pages/listsportdetails/listsportdetails.scss
+++ b/newGizaClub/src/pages/listsportdetails/listsportdetails.scss
@@ -6,4 +6,8 @@ page-listsportdetails {
         margin: auto;
         display: block;
     }
+    .sport-details-header{
+        white-space: normal;
+        text-align: center;
+    }
 }
