--- a/newGizaClub/src/pages/main/main.scss
+++ b/newGizaClub/src/pages/main/main.scss
@@ -1,10 +1,17 @@
 page-main {
     .rest-img-cont{
         width: 100%;
-        height: 55%;
+        height: 40%;
+    }
+    .pos-cont{
+        height: fit-content;
+    }
+    .pos-header-cont{
+        padding-top: 24px;
+        height: fit-content;
     }
     .pos-img{
-        height: 100% !important;
+        height: 70px !important;
         width: 100% !important;
 
     }
