--- a/newGizaClub/src/pages/resturants/resturants.scss
+++ b/newGizaClub/src/pages/resturants/resturants.scss
@@ -1,26 +1,36 @@
 page-resturants {
+    .order-button{
+        color: #003147;
+        background-color: #fbb713;
+        width: auto;
+        margin: auto;
+        margin-bottom: 10px;
+    }
     .no-items-cont{
         color: #357e9f;
         font-size: 1.4em;
         text-align: center;
     }
     .rest-img-cont{
-        width: 100%;
-        height: 40%;
+        width: 70%;
+        height: 60%;
+        margin: auto;
     }
     .prod-img-cont{
         margin: auto;
-        width: 80%;
+        width: 100%;
         height: 40%;
     }
-
-}
-.rest-slides.cont{
-    height: 33%;
+    }
+.rest-slides-cont{
+    height: 20%;
 }
 .rest-img{
-    height: 200px !important;
+    height: 130px !important;
     width: 100% !important;
+    text-align: center;
+    white-space: normal;
+    color:#357e9f;
 }
 
 .rest-name{
@@ -49,18 +59,25 @@ page-resturants {
     white-space: normal;
     overflow: auto;
     color: #086790;
+    width: 100%;
+    text-align: center;
 }
 .rest-input{
-    width:20%;
-    color: #000000 !important;
+    text-align: center;
+    margin: auto;
+    color: #1f759a !important;
+
 }
 .rest-button{
-    width: 13px;
-    height: 19px;
+    background-color: #fbb713;
+    width: fit-content;
+    height: 100%
 }
 .rest-item-price{
     text-align: center;
-    font-size: 24px;
+    font-size: 15px;
     vertical-align: bottom;
+    color: #1f759a;
     
 }
+
