updates to the view

--- a/newGizaClub/src/pages/resturants/resturants.scss
+++ b/newGizaClub/src/pages/resturants/resturants.scss
@@ -26,7 +26,7 @@ page-resturants {
     height: 20%;
 }
 .rest-img{
-    height: 130px !important;
+    height: 80px !important;
     width: 100% !important;
     text-align: center;
     white-space: normal;
@@ -64,8 +64,9 @@ page-resturants {
 }
 .rest-input{
     text-align: center;
+    font-family: fantasy;
     margin: auto;
-    color: #1f759a !important;
+    color: #fbb713 !important;
 
 }
 .rest-button{
