--- a/newGizaClub/src/pages/main/main.scss
+++ b/newGizaClub/src/pages/main/main.scss
@@ -11,8 +11,9 @@ page-main {
         height: fit-content;
     }
     .pos-img{
+        border-radius: 100%;
         height: 70px !important;
-        width: 100% !important;
+        width: 35% !important;
 
     }
     .rest-slides-cont{
