--- a/newGizaClub/src/pages/main/main.scss
+++ b/newGizaClub/src/pages/main/main.scss
@@ -13,7 +13,7 @@ page-main {
     .pos-img{
         border-radius: 100%;
         height: 70px !important;
-        width: 35% !important;
+        width: 70px !important;
 
     }
     .rest-slides-cont{
