update view for android

--- a/newGizaClub/src/pages/codeverification/codeverification.scss
+++ b/newGizaClub/src/pages/codeverification/codeverification.scss
@@ -5,5 +5,9 @@ page-codeverification {
     color: #003147;
     background-color: #fbb713;
     }
-
+    .icon{
+        color: 	#fbb713;
+        font-size: 3em;
+        margin: auto
+    }
 }
