--- a/newGizaClub/src/pages/main/main.scss
+++ b/newGizaClub/src/pages/main/main.scss
@@ -1,4 +1,9 @@
 page-main {
+    .icon{
+        color: 	#fbb713;
+        font-size: 3em;
+        margin: auto
+    }
     .rest-img-cont{
         width: 100%;
         height: 40%;
