ios update to the view

--- a/newGizaClub/src/app/app.scss
+++ b/newGizaClub/src/app/app.scss
@@ -44,3 +44,8 @@
   ion-header ion-icon.back-button-icon.icon, ion-header span.back-button-text.back-button-text-md{
     color : #fbb713
   }
+  .toolbar-title-ios {
+    width: inherit;
+    margin: auto;
+    color: #ffffff;
+}
