--- a/newGizaClub/src/components/header/header.scss
+++ b/newGizaClub/src/components/header/header.scss
@@ -17,7 +17,7 @@ header {
     .ios-logout-Button{
         margin: auto;
         
-        color: #003147;
+        color: #FFFFFF;
         background-color: transparent;
         }
 
