--- a/newGizaClub/src/pages/jointeam/jointeam.scss
+++ b/newGizaClub/src/pages/jointeam/jointeam.scss
@@ -8,9 +8,12 @@ page-jointeam {
         margin: auto;
         text-align: center;
     }
+    .user-select{
+        width: 50%;
+        max-width: 50%;
+        border: thin solid #8098a3;
+    }
     .join-button{
-        height: 100%;
-        width: auto;
         color: #003147;
         background-color: #fbb713;
        
