--- a/newGizaClub/src/pages/listsportdetails/listsportdetails.scss
+++ b/newGizaClub/src/pages/listsportdetails/listsportdetails.scss
@@ -6,6 +6,13 @@ page-listsportdetails {
         margin: auto;
         display: block;
     }
+    .sports-button{
+        color: #003147;
+        background-color: #fbb713;
+        width: auto;
+        margin: auto;
+    
+    }
     .sport-details-header{
         white-space: normal;
         text-align: center;
