--- a/newGizaClub/src/pages/resturants/resturants.scss
+++ b/newGizaClub/src/pages/resturants/resturants.scss
@@ -63,6 +63,7 @@ page-resturants {
     color: #086790;
     width: 100%;
     text-align: center;
+    font-weight: bold;
 }
 .rest-input{
     text-align: center;
