--- a/newGizaClub/src/pages/jointeam/jointeam.scss
+++ b/newGizaClub/src/pages/jointeam/jointeam.scss
@@ -8,6 +8,12 @@ page-jointeam {
         margin: auto;
         text-align: center;
     }
+    .coach-img{
+        height: 24%;
+        width: 42%;
+        margin: auto;
+        display: block;
+    }
     .join-button{
         height: 100%;
         width: auto;
